- added configuration for enable/disable RSS feeds (Thorsten)
- added permissions for guests (Thorsten)
- added support for multiple LDAP/AD servers (Bernhard Müller, Thorsten)
- added frontend dependency management using Bower (Thorsten)
- added support for PDO_MYSQL (Thorsten)
- added possibility to delete all logged search terms (Thorsten)
- added experimental support for bcrypt (Thorsten)
- updated bundled Symfony ClassLoader to version 2.4.1 (Thorsten)
- updated bundled jQuery to version 1.10.2 (Thorsten)
- updated bundled Bootstrap to version 3.1.1 (Thorsten)
- updated bundled Font Awesome to version 4.0.3 (Thorsten)
- updated bundled Modernizr to version 2.7.2 (Thorsten)
- updated bundled TinyMCE to version 4.0.28 (Thorsten)
- dropped support for ext/mysql (Thorsten)

Version 2.8.11 - 2014-06-
-

Version 2.8.10 - 2014-05-30
- dropped support for Internet Explorer 7 and 8 (Thorsten)
- updated Brazilian Portuguese translation (Joao Tafarelo)
- updated bundled TinyMCE to version 3.5.11 (Thorsten)
- updated bundled TCPDF library to version 6.0.078 (Thorsten)
- fixed some minor bugs (Thorsten)

Version 2.8.9 - 2014-04-28
- updated Thai translation
- fixed some minor bugs (Thorsten)

Version 2.8.8 - 2014-03-18
- improved API security (Thorsten)
- fixed search with Hebrew characters (Thorsten)
- fixed PDF export with Czech and Slovak characters (Thorsten)
- fixed a lot of bugs (Thorsten)

Version 2.8.7 - 2014-02-05
- fixed PHP 5.4 related issue introduced in 2.8.6 (Thorsten)

Version 2.8.6 - 2014-02-04
- fixed IE8/9 only XSS and CSRF vulnerabilities (JPCERT, Thorsten)
- updated Hungarian translation
- updated Spanish translation (Luis Carvalho)
- updated bundled Symfony ClassLoader to version 2.4.1 (Thorsten)
- fixed some minor bugs (Thorsten)

Version 2.8.5 - 2013-12-31
- fixed SSO logins with mod_auth_kerb (Stephane Lapie)
- improved HTTPS handling (Thorsten)
- updated Dutch translation
- updated European Portuguese translation
- fixed some minor bugs (Thorsten)
